syntax = "proto3";

package executors.v1.plan.v1;

import "google/protobuf/struct.proto";
import "tagger/tagger.proto";

option go_package = "github.com/powertoolsdev/protos/workflows/generated/types/executors/v1/plan/v1";

message RunnerPlan {
  string runner_id = 1 [(tagger.tags) = "faker:\"len=26\""];
  string namespace = 2 [(tagger.tags) = "faker:\"len=26\""];
  string release_name = 3 [(tagger.tags) = "faker:\"len=26\""];

  string atomic = 4 [(tagger.tags) = "faker:\"len=26\""];

  RunnerConfig config = 5;
  HelmChart chart = 6;
  KubeInfo cluster_info = 7;
}

message RunnerConfig {
  string runner_id = 1 [(tagger.tags) = "faker:\"len=26\""];

  string cookie = 2 [(tagger.tags) = "faker:\"len=26\""];

  string server_addr = 3 [(tagger.tags) = "faker:\"len=26\""];

  string odr_iam_role_arn = 4 [(tagger.tags) = "faker:\"len=26\""];
}

message HelmChart {
  string name = 1 [(tagger.tags) = "faker:\"len=26\""];

  string url = 2 [(tagger.tags) = "faker:\"len=26\""];

  string version = 3 [(tagger.tags) = "faker:\"len=26\""];

  google.protobuf.Struct helm_values = 4;
}

message KubeInfo {
  string id = 1 [(tagger.tags) = "faker:\"len=26\""];

  string endpoint = 2 [(tagger.tags) = "faker:\"len=26\""];

  string cadata = 3 [(tagger.tags) = "faker:\"len=26\""];

  string trusted_role_arn = 4 [(tagger.tags) = "faker:\"len=26\""];
}
